setup multiple databases